--- a/css/control.css
+++ b/css/control.css
@@ -15,6 +15,11 @@
     color: rgb(3, 6, 13);
 }
 
+.btn:active {
+    transition: all 0.2s linear;
+    background-color: rgb(240, 240, 240);
+}
+
 .btn:hover {
     cursor: pointer;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
