--- a/css/control.css
+++ b/css/control.css
@@ -13,6 +13,7 @@
     background-color: white;
     transition: box-shadow 0.2s linear;
     color: rgb(3, 6, 13);
+    user-select: none;
 }
 
 .btn:active {
